force-app/main/default/objects/Contact/fields/sugati__Adult__c.field-meta.xml
<CustomField>
    <fullName>sugati__Adult__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adult</label>
    <type>Checkbox</type>
</CustomField>