force-app/main/default/objects/Contact/fields/sugati__C_Age_In_Years__c.field-meta.xml
<CustomField>
    <fullName>sugati__C_Age_In_Years__c</fullName>
    <inlineHelpText>Age calculated in years</inlineHelpText>
    <label>Age In Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>