force-app/main/default/objects/Contact/fields/sugati__C_Child__c.field-meta.xml
<CustomField>
    <fullName>sugati__C_Child__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child</label>
    <type>Checkbox</type>
</CustomField>