force-app/main/default/objects/Contact/fields/sugati__C_Emergency_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>sugati__C_Emergency_Contact_Email__c</fullName>
    <label>Emergency Contact Email</label>
    <type>Email</type>
</CustomField>