force-app/main/default/objects/Contact/fields/sugati__C_Emergency_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__C_Emergency_Contact_Name__c</fullName>
    <label>Emergency Contact Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>