force-app/main/default/objects/Contact/fields/sugati__C_Emergency_No__c.field-meta.xml
<CustomField>
    <fullName>sugati__C_Emergency_No__c</fullName>
    <label>Emergency Contact Number</label>
    <type>Phone</type>
</CustomField>