force-app/main/default/objects/Contact/fields/sugati__C_Expires_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__C_Expires_Date__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>