force-app/main/default/objects/Contact/fields/sugati__C_Full_Name_on_Passport__c.field-meta.xml
<CustomField>
    <fullName>sugati__C_Full_Name_on_Passport__c</fullName>
    <label>Full Name on Passport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>