force-app/main/default/objects/Contact/fields/sugati__C_Issue_Place__c.field-meta.xml
<CustomField>
    <fullName>sugati__C_Issue_Place__c</fullName>
    <label>Issue Place</label>
    <length>80</length>
    <type>Text</type>
</CustomField>