force-app/main/default/objects/Contact/fields/sugati__C_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__C_Issued_Date__c</fullName>
    <label>Issued Date</label>
    <type>Date</type>
</CustomField>