force-app/main/default/objects/Contact/fields/sugati__C_Issuing_Authority__c.field-meta.xml
<CustomField>
    <fullName>sugati__C_Issuing_Authority__c</fullName>
    <label>Issuing Authority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>