force-app/main/default/objects/Contact/fields/sugati__C_Lead_Passenger__c.field-meta.xml
<CustomField>
    <fullName>sugati__C_Lead_Passenger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Passenger</label>
    <type>Checkbox</type>
</CustomField>