force-app/main/default/objects/Contact/fields/sugati__C_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__C_Middle_Name__c</fullName>
    <label>Middle Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>