force-app/main/default/objects/Contact/fields/sugati__C_Office_Phone__c.field-meta.xml
<CustomField>
    <fullName>sugati__C_Office_Phone__c</fullName>
    <label>Office Phone</label>
    <type>Phone</type>
</CustomField>