force-app/main/default/objects/Contact/fields/sugati__C_Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__C_Passport_Number__c</fullName>
    <label>Passport Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>