force-app/main/default/objects/Contact/fields/sugati__C_Place_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>sugati__C_Place_of_Birth__c</fullName>
    <label>Place of Birth</label>
    <length>50</length>
    <type>Text</type>
</CustomField>