force-app/main/default/objects/Contact/fields/sugati__C_Prefered_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__C_Prefered_Name__c</fullName>
    <label>Prefered Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>