force-app/main/default/objects/Contact/fields/sugati__Dietary_Requirements__c.field-meta.xml
<CustomField>
    <fullName>sugati__Dietary_Requirements__c</fullName>
    <label>Dietary Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>