force-app/main/default/objects/Contact/fields/sugati__S_C_Active_Subscription_Summary__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_C_Active_Subscription_Summary__c</fullName>
    <description>Controlled by communication preferences</description>
    <label>Active Subscription Summary</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>