force-app/main/default/objects/Contact/fields/sugati__S_C_Medical_Requirements__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_C_Medical_Requirements__c</fullName>
    <label>Medical Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>