force-app/main/default/objects/Contact/fields/sugati__S_C_Stripe_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_C_Stripe_Customer_Id__c</fullName>
    <label>Stripe Customer Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>