force-app/main/default/objects/Contact/fields/sugati__Total_Bookings__c.field-meta.xml
<CustomField>
    <fullName>sugati__Total_Bookings__c</fullName>
    <label>Total Bookings</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>